src/styles/EventPage.module.css
.event {
	display: flex;
	/* min-height: 75vh; */
	/* max-height: 90vh; */
	flex-direction: column;
}

.eventSummary {
	background-color: hsla(273, 56%, 50%, 1);
	border: 1px solid hsla(45, 84%, 75%, 1);
	border-radius: 5px;
	padding: 1rem;
	max-width: 600px;
	/* height: 80%; */
	width: 80vw;
	margin: 1rem auto;
}

.eventGrid {
	display: grid;
	grid-template-columns: 1fr 1fr;
	margin-top: 1rem;
}
.eventHead {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.eventTitle {
	margin: 0 auto;
	font-size: 1.5rem;
	font-weight: bold;
}
.eventText {
	margin: 0 auto;
	line-height: 1.5rem;
}
.eventFooter{
	display: flex;
	justify-content: space-around;
	font-size: 0.8rem;
	align-self: flex-end;
	flex-wrap: wrap;
}
.footerText {
	flex-basis: 100%;
	text-align: center;
}
.footerButtons {
	border-radius: 5px;
	border: 1px solid hsla(45, 84%, 75%, 1);
	background-color: hsla(273, 56%, 40%, 1);
	cursor: pointer;
	padding: 0.4rem;
}

.footerButtons:hover {
	background-color: hsla(273, 56%, 30%, 1);
}
.footerButtons:active {
	background-color: hsla(273, 56%, 20%, 1);
}

@media (min-width: 600px) {
	.event {
		/* flex-direction: row; */
	}
	.eventContainer {
		display: flex;
	}
	.eventFooter {
		justify-content: space around;
		width: 100%;
	}
	.footerText {
		flex-basis: auto;
		line-height: 2rem;
	}
	
};

